import "define_pro.proto";
import "define_attrib.proto";
import "msg_player.proto";

message MsgSetSession
{
  optional fixed32      seed         = 1;
  optional fixed64      session      = 2;
}

message MsgSyncDataCheckSum
{
  optional fixed32      item_canuse           = 1;
  optional fixed32      item_stuff            = 2;
  optional fixed32      item_guard_card       = 3;
  optional fixed32      item_use_limit        = 4;
}


